<resources>
    <string name="app_name">Car Expenses</string>
    <string name="main_nav_menu">Главная</string>
    <string name="history_nav_menu">История</string>
    <string name="other_nav_menu">Прочее</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Дата</string>
    <string name="mileage">Пробег</string>
    <string name="price">Стоимость</string>
    <string name="comment">Комментарий</string>
    <string name="type_fuel">Тип топлива\n</string>
    <string name="volume_l">Объём\n л</string>
    <string name="price_per_liter">Цена за литр</string>
    <string name="other">Прочее</string>
    <string name="parking">Парковка</string>
    <string name="refill">Заправка</string>
    <string name="wash">Мойка</string>
    <string name="delete">Удалить</string>
    <string name="edit">Измениить</string>
    <string name="choose">Выбрать</string>
    <string name="create_year">Год выпуска</string>
    <string name="vin">VIN</string>
    <string name="reg_number">Госномер</string>
    <string name="history_expense">История расходов</string>
    <string name="tuning">Тюнинг</string>
    <string name="tickets">Штрафы</string>
</resources>