<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Заправка"
                android:fontFamily="@font/days_one"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dateRefill"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="15dp"
                style="@style/editTextAddMenuStyle"
                android:background="@drawable/edit_text_style"
                android:hint="@string/date" />

            <EditText
                android:id="@+id/mileageRefill"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_style"
                android:inputType="number"
                style="@style/editTextAddMenuStyle"
                android:hint="@string/mileage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/costRefill"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_style"
                android:fontFamily="@font/days_one"
                android:inputType="number"
                android:hint="Стоимость"
                style="@style/editTextAddMenuStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <EditText
                android:id="@+id/typeFuelRefill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/type_fuel"
                android:background="@drawable/edit_text_style"
                android:layout_marginRight="10dp"
                style="@style/editTextAddMenuStyle" />

            <EditText
                android:id="@+id/capacityRefill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/volume_l"
                android:background="@drawable/edit_text_style"
                android:layout_marginRight="10dp"
                style="@style/editTextAddMenuStyle" />

            <EditText
                android:id="@+id/costPerLiterRefill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/price_per_liter"
                style="@style/editTextAddMenuStyle"
                android:background="@drawable/edit_text_style" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/commentRefill"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/edit_text_style"
                style="@style/editTextAddMenuStyle"
                android:hint="@string/comment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exitRefillDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:backgroundTint="#524F9D"
                android:fontFamily="@font/days_one"
                android:textSize="12sp"
                android:text="@string/exit" />

            <Button
                android:id="@+id/saveRefillInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#524F9D"

                android:fontFamily="@font/days_one"
                android:text="@string/save"
                android:textSize="12sp"
                />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>